sytaxanalyzer/submission/bison.output
Terminals unused in grammar

   T_Dims
   CLASS
   PROGRAM
   VOID
   TRUE
   FALSE
   DECIMAL
   END
   ENDL
   TCASSIGNMENT
   TCEQ
   TCNE
   TCLT
   TCLE
   TCGT
   TCGE
   TCOMMA
   TCDOT


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: ClassDecl
    5     | VarDecl
    6     | InterfaceDecl
    7     | FnDecl

    8 VarDecl: Variable T_Semicolon
    9        | Variable T_Slb T_IntConstant T_Srb T_Semicolon

   10 Variable: Type T_Identifier

   11 Type: T_Void
   12     | T_Bool
   13     | T_Int
   14     | T_Double
   15     | T_String

   16 NamedType: T_Identifier

   17 ClassDecl: T_Class T_Identifier ClassExtends ClassImplements TCLB FieldList TCRB
   18          | T_Class T_Identifier ClassExtends ClassImplements TCLB TCRB

   19 ClassExtends: T_Extends T_Identifier
   20             | %empty

   21 ClassImplements: T_Implements ImplementsTypeList
   22                | %empty

   23 ImplementsTypeList: ImplementsTypeList ',' T_Identifier
   24                   | T_Identifier

   25 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'
   26              | T_Interface T_Identifier '{' '}'

   27 FnDecl: FnDef StmtBlock

   28 FieldList: FieldList VarDecl
   29          | FieldList FnDecl
   30          | FieldList Stmt
   31          | VarDecl
   32          | FnDecl
   33          | Stmt

   34 Formals: FormalsList
   35        | %empty

   36 FormalsList: Variable
   37            | FormalsList ',' Variable

   38 Prototype: FnDef ';'

   39 FnDef: Type T_Identifier '(' Formals ')'

   40 PrototypeList: PrototypeList Prototype
   41              | Prototype

   42 StmtBlock: TCLB VarDeclList StmtList TCRB
   43          | TCLB VarDeclList TCRB
   44          | TCLB StmtList TCRB
   45          | TCLB TCRB

   46 StmtList: StmtList Stmt
   47         | Stmt

   48 VarDeclList: VarDeclList VarDecl
   49            | VarDecl

   50 Stmt: OptExpr T_Semicolon
   51     | T_While '(' Expr ')' Stmt
   52     | T_Return ';'
   53     | T_Return Expr ';'
   54     | T_Break ';'
   55     | T_Print '(' ExprList ')' ';'
   56     | T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt
   57     | IfStmt
   58     | T_Switch '(' Expr ')' '{' CaseStmtList DefaultStmt '}'
   59     | StmtBlock

   60 OptExpr: Expr
   61        | %empty

   62 CaseStmtList: CaseStmtList CaseStmt
   63             | CaseStmt

   64 CaseStmt: T_Case ':' StmtList
   65         | T_Case T_IntConstant ':'

   66 DefaultStmt: T_Default ':' StmtList
   67            | T_Default ':'

   68 IfStmt: T_If '(' Expr ')' Stmt
   69       | T_If '(' Expr ')' Stmt T_Else Stmt

   70 ExprList: ExprList ',' Expr
   71         | Expr

   72 Expr: LValue
   73     | Call
   74     | Constant
   75     | Expr T_Or Expr
   76     | Expr T_And Expr
   77     | Expr '<' Expr
   78     | Expr '>' Expr
   79     | Expr T_GreaterEqual Expr
   80     | Expr T_LessEqual Expr
   81     | Expr T_Equal Expr
   82     | Expr T_NotEqual Expr
   83     | Expr T_Add Expr
   84     | Expr T_Sub Expr
   85     | Expr T_Mul Expr
   86     | Expr T_Div Expr
   87     | Expr T_Mod Expr
   88     | Expr '^' Expr
   89     | Expr '|' Expr
   90     | Expr '&' Expr
   91     | Expr T_LeftShift Expr
   92     | Expr T_RightShift Expr
   93     | '-' Expr
   94     | '!' Expr
   95     | '~' Expr
   96     | Expr T_Incr
   97     | Expr T_Decr
   98     | '(' Expr ')'
   99     | '"' Expr '"'
  100     | T_This
  101     | T_ReadInteger '(' ')'
  102     | T_ReadLine '(' ')'
  103     | T_New NamedType
  104     | T_NewArray '(' Expr ',' Type ')'
  105     | LValue T_SingleEqual Expr

  106 Call: T_Identifier T_Pl Actuals T_Pr
  107     | T_Call T_Pl Actuals T_Pr
  108     | Expr '.' T_Identifier '(' Actuals ')'

  109 Actuals: ExprList
  110        | %empty

  111 LValue: T_Identifier
  112       | Expr '.' T_Identifier
  113       | Expr T_Slb Expr T_Srb

  114 Constant: T_IntConstant
  115         | T_DoubleConstant
  116         | T_BoolConstant
  117         | T_StringConstant
  118         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 94
'"' (34) 99
'&' (38) 90
'(' (40) 39 51 55 56 58 68 69 98 101 102 104 108
')' (41) 39 51 55 56 58 68 69 98 101 102 104 108
',' (44) 23 37 70 104
'-' (45) 93
'.' (46) 108 112
':' (58) 64 65 66 67
';' (59) 38 52 53 54 55 56
'<' (60) 77
'>' (62) 78
'^' (94) 88
'{' (123) 25 26 58
'|' (124) 89
'}' (125) 25 26 58
'~' (126) 95
error (256)
T_Void (258) 11
T_Bool (259) 12
T_Int (260) 13
T_Double (261) 14
T_String (262) 15
T_Class (263) 17 18
T_LessEqual (264) 80
T_GreaterEqual (265) 79
T_Equal (266) 81
T_NotEqual (267) 82
T_Dims (268)
T_SingleEqual (269) 105
T_LeftShift (270) 91
T_RightShift (271) 92
T_And (272) 76
T_Or (273) 75
T_Null (274) 118
T_Extends (275) 19
T_This (276) 100
T_Interface (277) 25 26
T_Implements (278) 21
T_While (279) 51
T_For (280) 56
T_If (281) 68 69
T_Else (282) 69
T_Return (283) 52 53
T_Break (284) 54
T_New (285) 103
T_NewArray (286) 104
T_Print (287) 55
T_ReadInteger (288) 101
T_ReadLine (289) 102
T_Switch (290) 58
T_Case (291) 64 65
T_Default (292) 66 67
T_Incr (293) 96
T_Decr (294) 97
CLASS (295)
PROGRAM (296)
T_Call (297) 107
VOID (298)
TRUE (299)
FALSE (300)
DECIMAL (301)
T_Semicolon (302) 8 9 50
END (303)
ENDL (304)
TCASSIGNMENT (305)
TCEQ (306)
TCNE (307)
TCLT (308)
TCLE (309)
TCGT (310)
TCGE (311)
T_Pl (312) 106 107
T_Pr (313) 106 107
TCLB (314) 17 18 42 43 44 45
TCRB (315) 17 18 42 43 44 45
T_Srb (316) 9 113
T_Slb (317) 9 113
TCOMMA (318)
TCDOT (319)
T_Add (320) 83
T_Sub (321) 84
T_Mul (322) 85
T_Div (323) 86
T_Mod (324) 87
T_Identifier (325) 10 16 17 18 19 23 24 25 26 39 106 108 111 112
T_StringConstant (326) 117
T_IntConstant (327) 9 65 114
T_DoubleConstant (328) 115
T_BoolConstant (329) 116
NEG (330)
NOELSE (331)
EMPTYCASE (332)
EMPTYDEFAULT (333)
NONEMPTYCASE (334)
NONEMPTYDEFAULT (335)


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
Program (99)
    on left: 1, on right: 0
DeclList (100)
    on left: 2 3, on right: 1 2
Decl (101)
    on left: 4 5 6 7, on right: 2 3
VarDecl (102)
    on left: 8 9, on right: 5 28 31 48 49
Variable (103)
    on left: 10, on right: 8 9 36 37
Type (104)
    on left: 11 12 13 14 15, on right: 10 39 104
NamedType (105)
    on left: 16, on right: 103
ClassDecl (106)
    on left: 17 18, on right: 4
ClassExtends (107)
    on left: 19 20, on right: 17 18
ClassImplements (108)
    on left: 21 22, on right: 17 18
ImplementsTypeList (109)
    on left: 23 24, on right: 21 23
InterfaceDecl (110)
    on left: 25 26, on right: 6
FnDecl (111)
    on left: 27, on right: 7 29 32
FieldList (112)
    on left: 28 29 30 31 32 33, on right: 17 28 29 30
Formals (113)
    on left: 34 35, on right: 39
FormalsList (114)
    on left: 36 37, on right: 34 37
Prototype (115)
    on left: 38, on right: 40 41
FnDef (116)
    on left: 39, on right: 27 38
PrototypeList (117)
    on left: 40 41, on right: 25 40
StmtBlock (118)
    on left: 42 43 44 45, on right: 27 59
StmtList (119)
    on left: 46 47, on right: 42 44 46 64 66
VarDeclList (120)
    on left: 48 49, on right: 42 43 48
Stmt (121)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 30 33 46 47 51
    56 68 69
OptExpr (122)
    on left: 60 61, on right: 50 56
CaseStmtList (123)
    on left: 62 63, on right: 58 62
CaseStmt (124)
    on left: 64 65, on right: 62 63
DefaultStmt (125)
    on left: 66 67, on right: 58
IfStmt (126)
    on left: 68 69, on right: 57
ExprList (127)
    on left: 70 71, on right: 55 70 109
Expr (128)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105, on right:
    51 53 56 58 60 68 69 70 71 75 76 77 78 79 80 81 82 83 84 85 86
    87 88 89 90 91 92 93 94 95 96 97 98 99 104 105 108 112 113
Call (129)
    on left: 106 107 108, on right: 73
Actuals (130)
    on left: 109 110, on right: 106 107 108
LValue (131)
    on left: 111 112 113, on right: 72 105
Constant (132)
    on left: 114 115 116 117 118, on right: 74


State 0

    0 $accept: . Program $end

    T_Void       shift, and go to state 1
    T_Bool       shift, and go to state 2
    T_Int        shift, and go to state 3
    T_Double     shift, and go to state 4
    T_String     shift, and go to state 5
    T_Class      shift, and go to state 6
    T_Interface  shift, and go to state 7

    Program        go to state 8
    DeclList       go to state 9
    Decl           go to state 10
    VarDecl        go to state 11
    Variable       go to state 12
    Type           go to state 13
    ClassDecl      go to state 14
    InterfaceDecl  go to state 15
    FnDecl         go to state 16
    FnDef          go to state 17


State 1

   11 Type: T_Void .

    $default  reduce using rule 11 (Type)


State 2

   12 Type: T_Bool .

    $default  reduce using rule 12 (Type)


State 3

   13 Type: T_Int .

    $default  reduce using rule 13 (Type)


State 4

   14 Type: T_Double .

    $default  reduce using rule 14 (Type)


State 5

   15 Type: T_String .

    $default  reduce using rule 15 (Type)


State 6

   17 ClassDecl: T_Class . T_Identifier ClassExtends ClassImplements TCLB FieldList TCRB
   18          | T_Class . T_Identifier ClassExtends ClassImplements TCLB TCRB

    T_Identifier  shift, and go to state 18


State 7

   25 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'
   26              | T_Interface . T_Identifier '{' '}'

    T_Identifier  shift, and go to state 19


State 8

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 9

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void       shift, and go to state 1
    T_Bool       shift, and go to state 2
    T_Int        shift, and go to state 3
    T_Double     shift, and go to state 4
    T_String     shift, and go to state 5
    T_Class      shift, and go to state 6
    T_Interface  shift, and go to state 7

    $default  reduce using rule 1 (Program)

    Decl           go to state 21
    VarDecl        go to state 11
    Variable       go to state 12
    Type           go to state 13
    ClassDecl      go to state 14
    InterfaceDecl  go to state 15
    FnDecl         go to state 16
    FnDef          go to state 17


State 10

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 11

    5 Decl: VarDecl .

    $default  reduce using rule 5 (Decl)


State 12

    8 VarDecl: Variable . T_Semicolon
    9        | Variable . T_Slb T_IntConstant T_Srb T_Semicolon

    T_Semicolon  shift, and go to state 22
    T_Slb        shift, and go to state 23


State 13

   10 Variable: Type . T_Identifier
   39 FnDef: Type . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 24


State 14

    4 Decl: ClassDecl .

    $default  reduce using rule 4 (Decl)


State 15

    6 Decl: InterfaceDecl .

    $default  reduce using rule 6 (Decl)


State 16

    7 Decl: FnDecl .

    $default  reduce using rule 7 (Decl)


State 17

   27 FnDecl: FnDef . StmtBlock

    TCLB  shift, and go to state 25

    StmtBlock  go to state 26


State 18

   17 ClassDecl: T_Class T_Identifier . ClassExtends ClassImplements TCLB FieldList TCRB
   18          | T_Class T_Identifier . ClassExtends ClassImplements TCLB TCRB

    T_Extends  shift, and go to state 27

    $default  reduce using rule 20 (ClassExtends)

    ClassExtends  go to state 28


State 19

   25 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'
   26              | T_Interface T_Identifier . '{' '}'

    '{'  shift, and go to state 29


State 20

    0 $accept: Program $end .

    $default  accept


State 21

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 22

    8 VarDecl: Variable T_Semicolon .

    $default  reduce using rule 8 (VarDecl)


State 23

    9 VarDecl: Variable T_Slb . T_IntConstant T_Srb T_Semicolon

    T_IntConstant  shift, and go to state 30


State 24

   10 Variable: Type T_Identifier .
   39 FnDef: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 31

    $default  reduce using rule 10 (Variable)


State 25

   42 StmtBlock: TCLB . VarDeclList StmtList TCRB
   43          | TCLB . VarDeclList TCRB
   44          | TCLB . StmtList TCRB
   45          | TCLB . TCRB

    T_Void            shift, and go to state 1
    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 32
    T_This            shift, and go to state 33
    T_While           shift, and go to state 34
    T_For             shift, and go to state 35
    T_If              shift, and go to state 36
    T_Return          shift, and go to state 37
    T_Break           shift, and go to state 38
    T_New             shift, and go to state 39
    T_NewArray        shift, and go to state 40
    T_Print           shift, and go to state 41
    T_ReadInteger     shift, and go to state 42
    T_ReadLine        shift, and go to state 43
    T_Switch          shift, and go to state 44
    T_Call            shift, and go to state 45
    TCLB              shift, and go to state 25
    TCRB              shift, and go to state 46
    T_Identifier      shift, and go to state 47
    T_StringConstant  shift, and go to state 48
    T_IntConstant     shift, and go to state 49
    T_DoubleConstant  shift, and go to state 50
    T_BoolConstant    shift, and go to state 51
    '!'               shift, and go to state 52
    '~'               shift, and go to state 53
    '('               shift, and go to state 54
    '-'               shift, and go to state 55
    '"'               shift, and go to state 56

    $default  reduce using rule 61 (OptExpr)

    VarDecl      go to state 57
    Variable     go to state 12
    Type         go to state 58
    StmtBlock    go to state 59
    StmtList     go to state 60
    VarDeclList  go to state 61
    Stmt         go to state 62
    OptExpr      go to state 63
    IfStmt       go to state 64
    Expr         go to state 65
    Call         go to state 66
    LValue       go to state 67
    Constant     go to state 68


State 26

   27 FnDecl: FnDef StmtBlock .

    $default  reduce using rule 27 (FnDecl)


State 27

   19 ClassExtends: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 69


State 28

   17 ClassDecl: T_Class T_Identifier ClassExtends . ClassImplements TCLB FieldList TCRB
   18          | T_Class T_Identifier ClassExtends . ClassImplements TCLB TCRB

    T_Implements  shift, and go to state 70

    $default  reduce using rule 22 (ClassImplements)

    ClassImplements  go to state 71


State 29

   25 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'
   26              | T_Interface T_Identifier '{' . '}'

    T_Void    shift, and go to state 1
    T_Bool    shift, and go to state 2
    T_Int     shift, and go to state 3
    T_Double  shift, and go to state 4
    T_String  shift, and go to state 5
    '}'       shift, and go to state 72

    Type           go to state 73
    Prototype      go to state 74
    FnDef          go to state 75
    PrototypeList  go to state 76


State 30

    9 VarDecl: Variable T_Slb T_IntConstant . T_Srb T_Semicolon

    T_Srb  shift, and go to state 77


State 31

   39 FnDef: Type T_Identifier '(' . Formals ')'

    T_Void    shift, and go to state 1
    T_Bool    shift, and go to state 2
    T_Int     shift, and go to state 3
    T_Double  shift, and go to state 4
    T_String  shift, and go to state 5

    $default  reduce using rule 35 (Formals)

    Variable     go to state 78
    Type         go to state 58
    Formals      go to state 79
    FormalsList  go to state 80


State 32

  118 Constant: T_Null .

    $default  reduce using rule 118 (Constant)


State 33

  100 Expr: T_This .

    $default  reduce using rule 100 (Expr)


State 34

   51 Stmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 81


State 35

   56 Stmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  shift, and go to state 82


State 36

   68 IfStmt: T_If . '(' Expr ')' Stmt
   69       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 83


State 37

   52 Stmt: T_Return . ';'
   53     | T_Return . Expr ';'

    T_Null            shift, and go to state 32
    T_This            shift, and go to state 33
    T_New             shift, and go to state 39
    T_NewArray        shift, and go to state 40
    T_ReadInteger     shift, and go to state 42
    T_ReadLine        shift, and go to state 43
    T_Call            shift, and go to state 45
    T_Identifier      shift, and go to state 47
    T_StringConstant  shift, and go to state 48
    T_IntConstant     shift, and go to state 49
    T_DoubleConstant  shift, and go to state 50
    T_BoolConstant    shift, and go to state 51
    '!'               shift, and go to state 52
    '~'               shift, and go to state 53
    ';'               shift, and go to state 84
    '('               shift, and go to state 54
    '-'               shift, and go to state 55
    '"'               shift, and go to state 56

    Expr      go to state 85
    Call      go to state 66
    LValue    go to state 67
    Constant  go to state 68


State 38

   54 Stmt: T_Break . ';'

    ';'  shift, and go to state 86


State 39

  103 Expr: T_New . NamedType

    T_Identifier  shift, and go to state 87

    NamedType  go to state 88


State 40

  104 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 89


State 41

   55 Stmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 90


State 42

  101 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 91


State 43

  102 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 92


State 44

   58 Stmt: T_Switch . '(' Expr ')' '{' CaseStmtList DefaultStmt '}'

    '('  shift, and go to state 93


State 45

  107 Call: T_Call . T_Pl Actuals T_Pr

    T_Pl  shift, and go to state 94


State 46

   45 StmtBlock: TCLB TCRB .

    $default  reduce using rule 45 (StmtBlock)


State 47

  106 Call: T_Identifier . T_Pl Actuals T_Pr
  111 LValue: T_Identifier .

    T_Pl  shift, and go to state 95

    $default  reduce using rule 111 (LValue)


State 48

  117 Constant: T_StringConstant .

    $default  reduce using rule 117 (Constant)


State 49

  114 Constant: T_IntConstant .

    $default  reduce using rule 114 (Constant)


State 50

  115 Constant: T_DoubleConstant .

    $default  reduce using rule 115 (Constant)


State 51

  116 Constant: T_BoolConstant .

    $default  reduce using rule 116 (Constant)


State 52

   94 Expr: '!' . Expr

    T_Null            shift, and go to state 32
    T_This            shift, and go to state 33
    T_New             shift, and go to state 39
    T_NewArray        shift, and go to state 40
    T_ReadInteger     shift, and go to state 42
    T_ReadLine        shift, and go to state 43
    T_Call            shift, and go to state 45
    T_Identifier      shift, and go to state 47
    T_StringConstant  shift, and go to state 48
    T_IntConstant     shift, and go to state 49
    T_DoubleConstant  shift, and go to state 50
    T_BoolConstant    shift, and go to state 51
    '!'               shift, and go to state 52
    '~'               shift, and go to state 53
    '('               shift, and go to state 54
    '-'               shift, and go to state 55
    '"'               shift, and go to state 56

    Expr      go to state 96
    Call      go to state 66
    LValue    go to state 67
    Constant  go to state 68


State 53

   95 Expr: '~' . Expr

    T_Null            shift, and go to state 32
    T_This            shift, and go to state 33
    T_New             shift, and go to state 39
    T_NewArray        shift, and go to state 40
    T_ReadInteger     shift, and go to state 42
    T_ReadLine        shift, and go to state 43
    T_Call            shift, and go to state 45
    T_Identifier      shift, and go to state 47
    T_StringConstant  shift, and go to state 48
    T_IntConstant     shift, and go to state 49
    T_DoubleConstant  shift, and go to state 50
    T_BoolConstant    shift, and go to state 51
    '!'               shift, and go to state 52
    '~'               shift, and go to state 53
    '('               shift, and go to state 54
    '-'               shift, and go to state 55
    '"'               shift, and go to state 56
